--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,8 @@ a {
   top: 0;
   margin-left: -70px;
   width: 140px;
+  height: 72px;
+  z-index: 1;
 }
 
 .site-navigation-map {
@@ -964,4 +966,192 @@ a {
 
 .main-navigation {
   position: relative;
+}
+
+/* стили внутренней страницы */
+
+.content-filter {
+  background: url("../img/background-inner.jpg") no-repeat;
+  background-position-y: -50px;
+}
+
+.content-filter legend {
+  font-size: 16px;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.options-list label {
+  font-size: 14px;
+  color: #ffffff;
+}
+
+.content-filter button {
+  border: 2px solid #ffffff;
+
+  background-color: rgba(255,255,255,0);
+  color: #ffffff;
+
+  padding: 0;
+  /*font-size: 14px;
+  line-height: 21px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-left: 10px;
+  padding-right: 10px;*/
+  text-transform: uppercase;
+
+  /*width: 133px;*/
+}
+/* сетка внутренней страницы */
+
+.content-filter fieldset {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+.content-filter .options-list {
+  margin: 0;
+}
+
+.content-filter {
+  padding-left: 72px;
+  padding-right: 72px;
+  padding-top: 31px;
+  display: flex;
+}
+
+.content-filter fieldset:first-child {
+  margin-right: 115px;
+}
+
+.filter-header {
+  margin-bottom: 34px;
+}
+
+.options-list {
+  line-height: 0;
+  padding-left: 39px;
+}
+
+.options-list li {
+  padding-bottom: 36px;
+}
+
+.content-filter button {
+  margin-left: auto;
+}
+
+.search-result p {
+  margin: 0;
+  padding: 0;
+}
+
+.search-result ul {
+  padding: 0;
+  margin: 0;
+
+  display: flex;
+}
+
+.search-result {
+  display: flex;
+  padding-left: 72px;
+  padding-top: 35px;
+  padding-bottom: 36px;
+  padding-right: 73px;
+}
+
+p.search-found {
+  font-weight: bold;
+  font-size: 21px;
+
+  margin-right: 49px;
+}
+
+p.search-sort {
+  font-size: 12px;
+  /*line-height: 18px;*/
+
+  margin-right: 40px;
+}
+
+.sort-type li {
+  margin-right: 33px;
+}
+
+ul.sort-order {
+  display: flex;
+  margin-left: auto;
+}
+
+.sort-order-up {
+  margin-right: 12px;
+}
+
+.sort-type a {
+  font-size: 12px;
+
+  color: #b2b2b2;
+  border-bottom: dotted 2px #81b3d2;
+}
+
+.sort-selected a {
+  color: #81b3d2;
+  border: none;
+}
+
+.sort-order-selected path {
+  fill: #81b3d2;
+}
+
+.sort-type a:hover {
+  color: #81b3d2;
+}
+
+.sort-type a:active {
+  color: #000000;
+  border: none;
+}
+
+.sort-order path:hover {
+  fill: #231f20;
+}
+
+.sort-order path:active {
+  fill: #81b3d2;
+}
+
+.options-list li {
+  position: relative;
+  line-height: 10px;
+}
+
+.options-list input + label::before {
+  content: "";
+  width: 23px;
+  height: 23px;
+  position: absolute;
+  top: -6px;
+  left: -40px;
+  width: 27px;
+  background-image: url(../img/checkbox-off.svg);
+  background-repeat: no-repeat;
+}
+
+.options-list input:checked + label::before {
+  content: "";
+  width: 23px;
+  height: 23px;
+  position: absolute;
+  top: -6px;
+  left: -40px;
+  width: 27px;
+  background-image: url(../img/checkbox-on.svg);
+  background-repeat: no-repeat;
+}
+
+.options-list input {
+  display: none;
 }
